--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "webpack-dev-server": "^3.1.9"
   },
   "scripts": {
-    "start": "webpack-dev-server --watch --open --config ./webpack/dev.config.js",
+    "dev": "webpack-dev-server --watch --open --config ./webpack/dev.config.js",
     "build": "webpack --config ./webpack/build.config.js"
   },
   "repository": {
